--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "dependencies": {},
   "devDependencies": {
     "bourbon": "^5.1.0",
+    "gulp-sass-vars": "^1.3.0",
     "gulp-wp-toolkit": "^2.3.2",
     "prettier": "^1.13.4",
     "prettier-stylelint": "^0.4.2",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-order": "^0.8.1"
+  },
+  "colors": {
+    "business-pro": {
+      "primary": "#fb2056",
+      "secondary": ""
+    }
   }
 }
